welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:3: error: '=>' expected but integer literal found.
		case >= 10 && <= 20: return Math.max(a, b);
                        ^max1020:4: error: identifier expected but 'return' found.
		case _: return 0;
                        ^max1020:4: error: '=>' expected but ';' found.
		case _: return 0;
                                ^