welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {
	Math.max(a, b) match {
		case >= 10 && <= 20: return Math.max(a, b);
		case _: return 0;
	}
}